# Calyx

./: .gitignore  .gitmodules  Calyx-Bridging-Header.h  README.md  appcast.xml  index.html  project.yml
Calyx/: Info.plist
calyx-session/: .gitignore  Cargo.toml
calyx-session/crates/cli/: Cargo.toml
calyx-session/crates/cli/src/: cli.rs  main.rs
calyx-session/crates/cli/src/commands/: attach.rs  client.rs  daemon.rs  history.rs  kill.rs  ls.rs  meta.rs  mod.rs  new.rs  remote_install.rs  shell_integration.rs  upgrade.rs
calyx-session/crates/cli/tests/: daemon_lock_regression.rs  history_cli.rs  shell_integration_attach.rs  smoke.rs
calyx-session/crates/daemon/: Cargo.toml
calyx-session/crates/daemon/src/: config.rs  conn.rs  error.rs  fdpass.rs  handoff.rs  history.rs  ledger.rs  lib.rs  outq.rs  peer.rs  session.rs  state.rs
calyx-session/crates/daemon/tests/: attach.rs  create_race.rs  exit_code_retrieval.rs  exit_teardown.rs  handshake.rs  history_cleanup.rs  history_crash_restore.rs  history_default_off.rs  history_persist.rs  history_status_query.rs  history_toggle.rs  input_blocking.rs  instant_exit_attach.rs  kill.rs  large_replay.rs  ledger_gc.rs  meta.rs  peer.rs  session_id_env.rs  sessions.rs
calyx-session/crates/proto/: Cargo.toml
calyx-session/crates/proto/src/: control.rs  error.rs  frame.rs  lib.rs
calyx-session/crates/proto/tests/: control_errors.rs  control_roundtrip.rs  framing.rs
calyx-session/crates/vt/: Cargo.toml
calyx-session/crates/vt-sys/: Cargo.toml  build.rs
calyx-session/crates/vt-sys/src/: lib.rs
calyx-session/crates/vt/src/: error.rs  lib.rs
calyx-session/crates/vt/tests/: replay_idempotency.rs  responder.rs
calyx-session/shim/: build.zig  build.zig.zon
calyx-session/shim/src/: gvt.zig
scripts/: build-session.sh  (+3 more)
(+559 files in other folders)
