[package]
name = "daemon"
version = "0.1.0"
edition.workspace = true
description = "calyx-session daemon library: PTY-backed session registry served over a Unix socket. Consumed by the calyx-session CLI's `daemon` subcommand."

[dependencies]
proto = { path = "../proto" }
vt = { path = "../vt" }
nix = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
